--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "inspiro",
-  "version": "1.0.0",
+  "name": "bardic-inspiration",
+  "version": "3.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.23.0",
-    "discord.js": "^12.4.0",
+    "discord.js": "^14.11.0",
     "dotenv": "^16.0.0",
     "ultimate-text-to-image": "^1.0.1"
   }
